--- a/quinyelax/static/css/main.styl
+++ b/quinyelax/static/css/main.styl
@@ -93,7 +93,7 @@ nav ul
 
 nav a
   -moz-border-radius 10px;
-  border-top-left-radius 10px;
+  border-radius 10px;
   display block
   margin-bottom 10px
   padding 15px 0
@@ -159,6 +159,8 @@ nav a:hover
     INTERMEDIATE Menu
    ==================== */
   nav a
+    -moz-border-radius 10px 10px 0 0 ;
+    border-radius 10px 10px 0 0 ;
     float left
     width 20%
     margin 0 0 0 1%
