adding points, goals and rank on group algorythm

--- a/quinyelax/static/css/main.styl
+++ b/quinyelax/static/css/main.styl
@@ -37,7 +37,6 @@ hr
 
 audio,
 canvas,
-img,
 video
   vertical-align middle
 
@@ -164,7 +163,7 @@ nav a:hover
     float left
     width 20%
     margin 0 0 0 1%
-    padding 25px 2%
+    padding 10px 2%
     margin-bottom 0
 
   nav li:first-child a
@@ -207,6 +206,8 @@ nav a:hover
   nav
     float right
     width 70%
+    a
+      margin-top 23px
   .group
     width 30%
   
