--- a/quinyelax/static/css/main.styl
+++ b/quinyelax/static/css/main.styl
@@ -82,6 +82,7 @@ body
 
 .title
   color TITLE
+  display none
 
 /* ==============
     MOBILE Menu
@@ -207,7 +208,7 @@ nav a:hover
     float right
     width 70%
     a
-      margin-top 23px
+      margin-top 34px
   .group
     width 30%
   
