--- a/quinyelax/templates/index.html
+++ b/quinyelax/templates/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>QuiNYelax</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,6 +23,7 @@
         <div class="header-container">
             <header class="wrapper clearfix">
                 <h1 class="title">QuiNYelaX</h1>
+                <img src="/static/img/2.png" />
                 <nav>
                     <ul>
                         <li><a href="/">Grupos</a></li>
