--- a/quinyelax/templates/index.html
+++ b/quinyelax/templates/index.html
@@ -47,7 +47,7 @@
                     </article>
                     
                 {% endfor %}
-                
+                <div class="clear"></div>
                 <a href="http://www.fifa.com/worldcup/groups/index.html" target="_blank">Mas información</a>
             </div> <!-- #main -->
         </div> <!-- #main-container -->
