--- a/quinyelax/static/css/main.styl
+++ b/quinyelax/static/css/main.styl
@@ -57,6 +57,8 @@ ul
   color #000
   padding 0.2em 0
 
+.clear
+  clear both
 /* ===== Initializr Styles ==================================================
    Author Jonathan Verrecchia - verekia.com/initializr/responsive-template
    ========================================================================== */
