fix notifications css & limit point algorythm for existing matches

--- a/quinyelax/templates/index.html
+++ b/quinyelax/templates/index.html
@@ -34,8 +34,8 @@
                 </nav>
             </header>
         </div>
-        <div class="errorMessage">{{ errorMessage }}</div>
-        <div class="successMessage">{{ successMessage }}</div>
+        <div class="errorMessage"><p>{{ errorMessage }}</p></div>
+        <div class="successMessage"><p>{{ successMessage }}</p></div>
         <div class="main-container">
             <div class="main wrapper clearfix">
                 {% for g in groups %}
