--- a/quinyelax/templates/subscriberForm.html
+++ b/quinyelax/templates/subscriberForm.html
@@ -2,10 +2,10 @@
             
             {% csrf_token %}
             <p>
-            	<label for="id_email"><b>¡Suscribete para saber como participar!</b></label> <br/>
+            	<label for="id_email"><b>¡Inscribete a la quiniela y participa!</b></label> <br/>
             	<input id="id_email" maxlength="75" name="email" type="email" value="" placeholder="email">
             
-            	<input type="submit" value="Suscribirme" class="btn_subscribe">
+            	<input type="submit" value="Inscribeme" class="btn_subscribe">
         	</p>
         </form>
         <div class="clear"></div>
