--- a/quinyelax/templates/subscriberForm.html
+++ b/quinyelax/templates/subscriberForm.html
@@ -2,7 +2,7 @@
             
             {% csrf_token %}
             <p>
-            	<label for="id_email"><b>¡Inscribete a la quiniela y participa!</b></label> <br/>
+            	<label for="id_email"><b>¡Inscríbete a la quiniela y participa!</b></label> <br/>
             	<input id="id_email" maxlength="75" name="email" type="email" value="" placeholder="email">
             
             	<input type="submit" value="Inscribeme" class="btn_subscribe">
