--- a/quinyelax/static/css/main.styl
+++ b/quinyelax/static/css/main.styl
@@ -161,18 +161,24 @@ nav a:hover
   .pts
     text-align right
     width 25%
-.main a 
-  float right
+.main 
+  a 
+    float right
 
 /* ==============
     MOBILE Main
    ============== */
 .main
   padding 15px 0
-
-.main article h1
-  font-size 2em
-
+  
+  article h1
+    font-size 2em
+  .team
+    margin 0 auto
+    img
+      width 100%
+  h2
+    text-align center
 
 .footer-container footer
   color FONT
@@ -231,7 +237,10 @@ nav a:hover
     float left
     margin-left 1%
     width 45%
-
+  .main
+    figure
+      width 70%
+    
 
 @media only screen and (min-width 768px)
 
@@ -257,7 +266,29 @@ nav a:hover
       margin-top 34px
   .group
     width 30%
+  .main
+    .flagsContainer
+      margin 0 auto
+      width 90%
+    figure
+      float left
+      height 150px
+      width 40%
+      img
+        height 100%
+        width auto
+    .vs 
+      float left
+      margin 60px 5% 0 5%
+      min-height 150px
+      width 10%
   
+@media only screen and (min-width 950px)
+
+
+  .main
+    figure
+      height 200px
 
 @media only screen and (min-width 1140px)
   /* ===============
@@ -271,6 +302,7 @@ nav a:hover
   .group
     margin-left 3%
     width 20%
+
 
 /* ==========================================================================
    Helper classes
